@@ -496,9 +496,6 @@ specifier|protected
 name|Bits
 name|checkMatchAllBits
 parameter_list|(
-name|Bits
-name|deleted
-parameter_list|,
 name|OpenBitSet
 name|valid
 parameter_list|,
@@ -524,13 +521,6 @@ name|OPTION_CACHE_BITS
 argument_list|)
 condition|)
 block|{
-if|if
-condition|(
-name|deleted
-operator|==
-literal|null
-condition|)
-block|{
 for|for
 control|(
 name|int
@@ -560,49 +550,6 @@ block|{
 return|return
 name|valid
 return|;
-block|}
-block|}
-block|}
-else|else
-block|{
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|maxDocs
-condition|;
-name|i
-operator|++
-control|)
-block|{
-if|if
-condition|(
-operator|!
-name|deleted
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-operator|&&
-operator|!
-name|valid
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-condition|)
-block|{
-return|return
-name|valid
-return|;
-block|}
 block|}
 block|}
 block|}
@@ -678,17 +625,6 @@ operator|.
 name|iterator
 argument_list|()
 decl_stmt|;
-specifier|final
-name|Bits
-name|delDocs
-init|=
-name|MultiFields
-operator|.
-name|getDeletedDocs
-argument_list|(
-name|reader
-argument_list|)
-decl_stmt|;
 name|OpenBitSet
 name|validBits
 init|=
@@ -735,7 +671,7 @@ name|termsEnum
 operator|.
 name|docs
 argument_list|(
-name|delDocs
+literal|null
 argument_list|,
 name|docs
 argument_list|)
@@ -790,8 +726,6 @@ name|valid
 operator|=
 name|checkMatchAllBits
 argument_list|(
-name|delDocs
-argument_list|,
 name|validBits
 argument_list|,
 name|vals
