@@ -639,17 +639,6 @@ operator|.
 name|iterator
 argument_list|()
 decl_stmt|;
-specifier|final
-name|Bits
-name|delDocs
-init|=
-name|MultiFields
-operator|.
-name|getDeletedDocs
-argument_list|(
-name|reader
-argument_list|)
-decl_stmt|;
 name|DocsEnum
 name|docs
 init|=
@@ -739,7 +728,7 @@ name|termsEnum
 operator|.
 name|docs
 argument_list|(
-name|delDocs
+literal|null
 argument_list|,
 name|docs
 argument_list|)
